--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ pydantic_core==2.14.6
 python-dotenv==1.0.0
 PyYAML==6.0.1
 sniffio==1.3.0
+SQLAlchemy==2.0.25
 starlette==0.32.0.post1
 typing_extensions==4.9.0
 uvicorn==0.25.0
