--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.13.1
 annotated-types==0.6.0
 anyio==4.2.0
 click==8.1.7
@@ -5,6 +6,9 @@ fastapi==0.108.0
 h11==0.14.0
 httptools==0.6.1
 idna==3.6
+Mako==1.3.0
+MarkupSafe==2.1.3
+psycopg2-binary==2.9.9
 pydantic==2.5.3
 pydantic_core==2.14.6
 python-dotenv==1.0.0
