--- a/requirements.txt
+++ b/requirements.txt
@@ -9,13 +9,17 @@ fastapi==0.108.0
 h11==0.14.0
 httptools==0.6.1
 idna==3.6
+iniconfig==2.0.0
 Mako==1.3.0
 MarkupSafe==2.1.3
+packaging==23.2
+pluggy==1.3.0
 psycopg2-binary==2.9.9
 pyasn1==0.5.1
 pycparser==2.21
 pydantic==2.5.3
 pydantic_core==2.14.6
+pytest==7.4.4
 python-dotenv==1.0.0
 python-jose==3.3.0
 python-multipart==0.0.6
