--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
 alembic==1.13.1
 annotated-types==0.6.0
 anyio==4.2.0
+certifi==2023.11.17
 cffi==1.16.0
 click==8.1.7
 cryptography==41.0.7
 ecdsa==0.18.0
 fastapi==0.108.0
 h11==0.14.0
+httpcore==1.0.2
 httptools==0.6.1
+httpx==0.26.0
 idna==3.6
 iniconfig==2.0.0
 Mako==1.3.0
@@ -18,6 +21,7 @@ psycopg2-binary==2.9.9
 pyasn1==0.5.1
 pycparser==2.21
 pydantic==2.5.3
+pydantic-settings==2.1.0
 pydantic_core==2.14.6
 pytest==7.4.4
 python-dotenv==1.0.0
